--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.trophyemall">
 
+    <uses-permission-sdk-23 android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,6 +13,10 @@
         android:theme="@style/Theme.Trophyemall">
         <activity
             android:name=".MainActivity"
+            android:theme="@style/Theme.Trophyemall.NoActionBar">
+        </activity>
+        <activity
+            android:name=".LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.Trophyemall.NoActionBar">
             <intent-filter>
