--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Trophyemall">
+        <activity android:name=".model.CreateActivity"></activity>
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.Trophyemall.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.Trophyemall.NoActionBar"></activity>
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
